--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,62 @@
 body {
-    background-color: pink;
-    border-width: 20px;
-    border-style: dashed;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
 }
-h1 {
-  color: blue;
+.header {
+  height: 150px;
+  background-color: #f2f2f3;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
-p {
-  color: red;
+.header__navigation {
+  overflow: hidden;
+}
+.header__logo__container{
+  width: 100%;
+  display: flex;
+}
+
+.header__navigation a {
+  float: left;
+  color: #050505;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.header__navigation a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.header__navigation a.active {
+  background-color: #04AA6D;
+  color: white;
+}
+.header__logo {
+  height: 100px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.footer{
+  background-color: #f2f2f3;
+  height: 200px;
+  width: 100%;
+  clear: both;
+}
+body{
+  margin: 0;
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
+main {
+    display: block;
+    flex: 1 0 auto;
+}
+section{
+  height: 600px;
 }
