--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans&display=swap');
 body {
+  display: flex;
+  min-height: 100vh;
+  flex-direction: column;
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Montserrat', sans-serif;
+  text-align: center;
 }
 .header {
   height: 150px;
@@ -42,21 +47,61 @@ body {
   margin-right: auto;
 }
 .footer{
-  background-color: #f2f2f3;
+  background-color: #3D90CD;
   height: 200px;
   width: 100%;
   clear: both;
-}
-body{
-  margin: 0;
-  display: flex;
-  min-height: 100vh;
-  flex-direction: column;
+  text-align: center;
+  padding: 5px;
 }
 main {
     display: block;
     flex: 1 0 auto;
 }
 section{
-  height: 600px;
+  height: 800px;
+  padding-top: 20px;
 }
+#home{
+  background-color: #3D90CD;
+}
+#work{
+  list-style-type: circle;
+}
+/* Style inputs with type="text", select elements and textareas */
+input[type=text], select, textarea {
+  width: 100%; /* Full width */
+  padding: 12px; /* Some padding */ 
+  border: 1px solid #ccc; /* Gray border */
+  border-radius: 4px; /* Rounded borders */
+  box-sizing: border-box; /* Make sure that padding and width stays in place */
+  margin-top: 6px; /* Add a top margin */
+  margin-bottom: 16px; /* Bottom margin */
+  resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+}
+
+/* Style the submit button with a specific background color etc */
+input[type=submit] {
+  background-color: #04AA6D;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+/* When moving the mouse over the submit button, add a darker green color */
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+/* Add a background color and some padding around the form */
+.container {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+h1:hover {
+  background-color: #04AA6D;
+}
+</style>
