--- a/styles.css
+++ b/styles.css
@@ -64,6 +64,8 @@ section{
 }
 #home{
   background-color: #3D90CD;
+  text-align: center;
+  padding-top: 300px;
 }
 #work{
   list-style-type: circle;
@@ -101,7 +103,13 @@ input[type=submit]:hover {
   background-color: #f2f2f2;
   padding: 20px;
 }
-h1:hover {
+h2:hover {
   background-color: #04AA6D;
 }
-</style>
+#about{
+  display: flex;
+}
+.about__text{
+  margin-left: 40px;
+  margin-right: 40px;
+}
